# template-app

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/api/v1/: api.py
app/api/v1/endpoints/: endpoint.py
app/core/: logger.py
app/prompts/: __init__.py
app/services/: workflow.py
app/utils/: file_handler.py  helpers.py  llm.py
tests/: test_helpers.py  test_llm.py
