[project]
name = "name-app"
version = "0.1.0"
description = "name-app"
authors = [
    {name = "author"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.111.1,<0.112.0)",
    "uvicorn (==0.30.3)",
    "openai (==1.37.1)",
    "anthropic (==0.40.0)",
    "python-docx (==1.1.2)",
    "httpx (==0.27.2)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
black = "^22.3.0"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
